src-ken&y/objects/Substitution__c.object
<CustomObject>
    <customHelpPage>HelpSubstitution</customHelpPage>
    <fields>
        <fullName>Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the product is blocked from substitution for the matching customer(s) and/or warehouse(s).</description>
        <inlineHelpText>A check mark indicates that  the system prevents the selected product from being shipped to a customer and/or facility.  If a customer and/or facility are not specified, the block applies to all customers and facilities.</inlineHelpText>
        <label>Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The current product that the substitution should apply to.</description>
        <label>Current Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Product_Selections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Sold-to / Ship-to Customer to which the substitution should apply to.</description>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sold To, Ship To</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Substitutions</relationshipLabel>
        <relationshipName>Product_Selections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date on which the substitution is effective until.</description>
        <inlineHelpText>Date on which the block or substitution ends. The end date must be greater than the start date.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The facility to which the substitution should apply to.</description>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipName>Product_Selections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <formula>Current_Product__r.Primary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A check mark indicates that  the current product is the primary product.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Selection_Index__c</fullName>
        <description>The index used to locate the record.</description>
        <label>Product Selection Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reason code for this substitution (or block, if the product is blocked from substitution.</description>
        <inlineHelpText>Displays the list of reasons for the substitution.</inlineHelpText>
        <label>Reason Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reason_Code__c.Type__c</field>
                <operation>equals</operation>
                <value>Substitution</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Substitutions</relationshipLabel>
        <relationshipName>Product_Selections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date on which the substitution is effective from.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Substitute_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product that should be substituted for the current product.</description>
        <inlineHelpText>The substitute product must have the same UPC code as the current product.</inlineHelpText>
        <label>Substitute Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Substitutions (Substitute Product)</relationshipLabel>
        <relationshipName>Product_Selections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <description>UPC Code from the Current Product.</description>
        <formula>Current_Product__r.UPC_Code__c</formula>
        <label>UPC</label>
        <type>Text</type>
    </fields>
    <label>Substitution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Block__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>UPC__c</columns>
        <columns>Primary__c</columns>
        <columns>Current_Product__c</columns>
        <columns>Substitute_Product__c</columns>
        <columns>Facility__c</columns>
        <columns>Customer__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Substitution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Substitutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Customer_type_validation</fullName>
        <active>false</active>
        <description>Customer must be either sold-to or ship-to.</description>
        <errorConditionFormula>AND(
  NOT(ISNULL(Customer__c) || ISBLANK(Customer__c)),
  Customer__r.RecordType.Name &lt;&gt; &apos;Sold To&apos;,
  Customer__r.RecordType.Name &lt;&gt; &apos;Ship To&apos;
)</errorConditionFormula>
        <errorDisplayField>Customer__c</errorDisplayField>
        <errorMessage>Customer must be of type either Sold-to or Ship-to.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_date_must_be_after_Start_Date</fullName>
        <active>true</active>
        <description>End Date must occur after Start Date on the substitution rule.</description>
        <errorConditionFormula>Start_Date__c   &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date must be after the Start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Products_must_have_same_UPC_code</fullName>
        <active>true</active>
        <description>The current product and the substitute product must have the same UPC code.</description>
        <errorConditionFormula>AND(
NOT(ISNULL( Substitute_Product__c ) || ISBLANK( Substitute_Product__c )),
Current_Product__r.UPC_Code__c &lt;&gt;       Substitute_Product__r.UPC_Code__c
)</errorConditionFormula>
        <errorDisplayField>Substitute_Product__c</errorDisplayField>
        <errorMessage>Substitute product must have the same UPC code as current product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_code_must_be_of_type_substitution</fullName>
        <active>true</active>
        <description>Reason code must be of type &apos;Substitution&apos;.</description>
        <errorConditionFormula>NOT(ISNULL(Reason_Code__c) || ISBLANK(Reason_Code__c))
&amp;&amp;
NOT(ISPICKVAL(Reason_Code__r.Type__c, &apos;Substitution&apos;))</errorConditionFormula>
        <errorDisplayField>Reason_Code__c</errorDisplayField>
        <errorMessage>Reason code must be of type &apos;Substitution&apos;</errorMessage>
    </validationRules>
</CustomObject>